--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,27 @@ body {
   padding: 0;
 }
 
+header, nav, div {
+  box-sizing: border-box;
+}
+
+.header {
+    display: block;
+    position: fixed;
+    width: 100%;
+    height: 50px;
+    padding: 1em;
+    background-color: #fff;
+    border-bottom: 1px solid #999;
+    border-radius: 3px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
+    z-index: 2;
+  }
+
+.hamburger-icon {
+  display: none;
+}
+
 .container {
   height: 100%;
   position: relative;
@@ -19,7 +40,7 @@ h1 {
   color: #525454;
   font-size: 22px;
   margin: 0 0 10px 0;
-  text-align: center;
+  text-align: left;
 }
 
 #hide-listings,
@@ -28,11 +49,11 @@ h1 {
 }
 
 #map {
-  bottom:0px;
+  bottom: 0;
   height: 100%;
-  left: 362px;
+  left: 340px;
   position: absolute;
-  right: 0px;
+  right: 0;
 }
 
 #filter {
@@ -44,21 +65,110 @@ h1 {
   display: block;
 }
 
+.nav {
+  height: 100%;
+  width: 340px;
+  z-index: 0;
+}
+
 .options-box {
   background: #fff;
   border: 1px solid #999;
   border-radius: 3px;
   height: 100%;
   line-height: 35px;
-  padding: 10px 10px 30px 10px;
+  padding: 60px 10px 30px 10px;
   text-align: left;
   width: 340px;
+  z-index: 1;
 }
 
-.open {
+.loc-open {
   color: #00cc66;
 }
 
-.closed {
+.loc-closed {
   color: #ff5050;
+}
+
+
+
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 18px;
+    margin: 0;
+    padding-left: 42px;
+    text-align: left;
+  }
+
+  .hamburger-icon {
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 3;
+  }
+
+  .hamburger-icon svg {
+    padding-top: 10px;
+    padding-left: 10px;
+    width: 32px;
+    fill: #E0E0E0;
+  }
+
+  .options-box {
+    position: relative;
+    width: 280px;
+    border-top: 0;
+    border-color: #E0E0E0;
+    padding-bottom: 10px;
+  }
+
+  .nav {
+    position: absolute;
+    width: 280px;
+    background-color: #fff;
+    opacity: 0.9;
+    /* move drawer off canvas */
+    transform: translate(-300px, 0);
+      -webkit-transform: translate(-300px, 0);
+    transition: transform 0.3s ease;
+    z-index: 1;
+  }
+
+  .nav.open {
+    -webkit-transform: translate(0, 0);
+    transform: translate(0, 0);
+    transition: transform 0.3s ease;
+  }
+
+  h2 {
+    font-size: 20px;
+    margin: 0;
+  }
+
+  h3 {
+    font-size: 16px;
+    margin: 0;
+  }
+
+  #filter {
+    border: 1px solid #E0E0E0;
+  }
+
+  #map {
+    padding-top: 50px;
+    left: 0;
+  }
+}
+
+@media screen and (max-width: 414px) {
+  .nav {
+    max-height: 500px;
+  }
+
+  .options-box {
+    max-height: 500px;
+    overflow-y: scroll;
+  }
 }
