--- a/views/index.html
+++ b/views/index.html
@@ -37,6 +37,6 @@
     <script src="../knockout/build/output/knockout-latest.js"></script>
     <script src="../jquery/dist/jquery.min.js"></script>
     <script src="../js/app.js"></script>
-    <script async defer onerror="mapError()" src="https://maps.googleapis.com/maps/api/js?&key={{ GOOGLE_MAPS_API }}&libraries=places&sensor=true"></script>
+    <script async defer onerror="mapError()" src="https://maps.googleapis.com/maps/api/js?&key={{ GOOGLE_MAPS_API }}&libraries=places&callback=initMap"></script>
   </body>
 </html>
